site ready to deploy

--- a/Main Template/index.html
+++ b/Main Template/index.html
@@ -145,7 +145,7 @@
                     </div>
                 </div>
                 
-                
+                <!-- Skills Bar that I commented out -->
                 <!-- <div class="col-xs-12 col-md-6 skills-section">
 
                     <div class="progress-bar-linear">
@@ -154,7 +154,7 @@
                             <span class="main-color progress-bar-text">98%</span>
                         </div>
                         <div class="progress-bar-skills">
-                            <div class="progress-bar-line main-color-bg" data-percent="98"></div>
+                            <div class="progress-bar-line main-color-bg" data-percent="15"></div>
                         </div>
                     </div>
                     <div class="progress-bar-linear">
@@ -342,14 +342,13 @@
                     </div>
                 </div>
 
-                <div class="col-sm-6 col-md-4 filtr-item asian">
+                <div class="col-sm-6 col-md-4 filtr-item web music">
                     <div class="single-work mb-30">
-                        <a href="/Users/charles/Desktop/Imozar - Personal Portfolio Template/documentation/assets/images/MittyHaircut.png" class="popup-link">
-                            <img class="effect" src="https://images.idgesg.net/images/article/2019/11/16in-macbook-pro-angle-100818635-large.jpg" alt="work-3">
+                        <a href="http://placehold.it/770x700" class="popup-link">
+                            <img class="effect" src="http://placehold.it/770x700" alt="work-4">
                             <div class="work-overlay effect">
-                                <!-- <h3>Project Title</h3> -->
-                                <p>Mid Taper Mohawk</p>
-                                </p>
+                                <h3>Project Title</h3>
+                                <p>WEB DEVELOPMENT</p>
                             </div>
                         </a>
                     </div>
