changed profile pic

--- a/Main Template/index.html
+++ b/Main Template/index.html
@@ -93,7 +93,7 @@
         <div class="page-table">
             <div class="table-cell text-center">
                 <div class="avatar-hero">
-                    <img src="file:///Users/charles/Desktop/Screen%20Shot%202020-01-03%20at%2011.55.50%20PM.png">
+                    <img src="img/profile-pic.jpg">
                 </div>
                 <h1>Welcome to Chuck's Cuts</h1>
                 <h2 class="typer-title">Welcome</h2>
@@ -131,6 +131,7 @@
                                     <li><span><i class="fa fa-phone"></i> Phone : </span>+1-408-833-4588</li>
                                 </ul>
                             </div>
+                            
                         </div>
 
                         <ul class="social-list">
