added venmo address to about page

--- a/Main Template/index.html
+++ b/Main Template/index.html
@@ -127,11 +127,10 @@
                             </div>
                             <div class="col-sm-6">
                                 <ul>
-                                    <li><span><i class="fa fa-calendar"></i> Date of birth : </span>29 March 2000</li>
+                                    <li><span><i class="fa fa-credit-card"></i> Venmo : </span>@charlesmeng18</li>
                                     <li><span><i class="fa fa-phone"></i> Phone : </span>+1-408-833-4588</li>
                                 </ul>
                             </div>
-                            
                         </div>
 
                         <ul class="social-list">
@@ -145,7 +144,6 @@
 
                     </div>
                 </div>
-                
                 <!-- Skills Bar that I commented out -->
                 <!-- <div class="col-xs-12 col-md-6 skills-section">
 
