added home mudd background

--- a/Main Template/index.html
+++ b/Main Template/index.html
@@ -317,25 +317,25 @@
 
             <div class="row filtr-container">
 
-                <div class="col-sm-6 col-md-4 filtr-item web music">
+                <div class="col-sm-6 col-md-4 filtr-item combovers">
                     <div class="single-work mb-30">
                         <a href="img/andy-combover-fade.jpg" class="popup-link">
                             <img class="effect" src="img/andy-combover-fade.jpg" alt="work-4">
                             <div class="work-overlay effect">
-                                <h3>Project Title</h3>
-                                <p>WEB DEVELOPMENT</p>
+                                <!-- <h3>Project Title</h3> -->
+                                <p>Combover Fade w/ Hard Part</p>
                             </div>
                         </a>
                     </div>
                 </div>
 
-                <div class="col-sm-6 col-md-4 filtr-item web music">
+                <div class="col-sm-6 col-md-4 filtr-item fades">
                     <div class="single-work mb-30">
                         <a href="img/eric-mid-fade.jpg" class="popup-link">
                             <img class="effect" src="img/eric-mid-fade.jpg" alt="work-4">
                             <div class="work-overlay effect">
-                                <h3>Project Title</h3>
-                                <p>WEB DEVELOPMENT</p>
+                                <!-- <h3>Project Title</h3> -->
+                                <p>Mid Fade Haircut</p>
                             </div>
                         </a>
                     </div>
