added new pictures

--- a/Main Template/index.html
+++ b/Main Template/index.html
@@ -305,12 +305,12 @@
                         <li class="main-color">
                             <a href="#" class="filter effect" data-filter=".combovers">Combovers</a>
                         </li>
-                        <li class="main-color">
+                        <!-- <li class="main-color">
                             <a href="#" class="filter effect" data-filter=".photography">photography</a>
                         </li>
                         <li class="main-color">
                             <a href="#" class="filter effect" data-filter=".music">Music</a>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </div> <!-- End Row -->
@@ -343,8 +343,8 @@
 
                 <div class="col-sm-6 col-md-4 filtr-item web music">
                     <div class="single-work mb-30">
-                        <a href="http://placehold.it/770x700" class="popup-link">
-                            <img class="effect" src="http://placehold.it/770x700" alt="work-4">
+                        <a href="img/Jake_Chucks_Cuts_Website.jpg" class="popup-link">
+                            <img class="effect" src="img/Jake_After.png" alt="work-4">
                             <div class="work-overlay effect">
                                 <h3>Project Title</h3>
                                 <p>WEB DEVELOPMENT</p>
@@ -355,8 +355,8 @@
 
                 <div class="col-sm-6 col-md-4 filtr-item web music">
                     <div class="single-work mb-30">
-                        <a href="http://placehold.it/770x700" class="popup-link">
-                            <img class="effect" src="http://placehold.it/770x700" alt="work-4">
+                        <a href="img/Joey_Chucks_Cuts_Website.jpg" class="popup-link">
+                            <img class="effect" src="img/Joey_Chucks_Cut_After.jpg" alt="work-4">
                             <div class="work-overlay effect">
                                 <h3>Project Title</h3>
                                 <p>WEB DEVELOPMENT</p>
