--- a/Main Template/index.html
+++ b/Main Template/index.html
@@ -320,7 +320,7 @@
                 <div class="col-sm-6 col-md-4 filtr-item combovers">
                     <div class="single-work mb-30">
                         <a href="img/andy-combover-fade.jpg" class="popup-link">
-                            <img class="effect" src="img/andy-combover-fade.jpg" alt="work-4">
+                            <img class="effect" src="img/andy-combover-fade.jpg" width="770" height="700" alt="work-4">
                             <div class="work-overlay effect">
                                 <!-- <h3>Project Title</h3> -->
                                 <p>Combover Fade w/ Hard Part</p>
@@ -332,7 +332,7 @@
                 <div class="col-sm-6 col-md-4 filtr-item fades">
                     <div class="single-work mb-30">
                         <a href="img/eric-mid-fade.jpg" class="popup-link">
-                            <img class="effect" src="img/eric-mid-fade.jpg" alt="work-4">
+                            <img class="effect" src="img/eric-mid-fade.jpg" width="770" height="700" alt="work-4">
                             <div class="work-overlay effect">
                                 <!-- <h3>Project Title</h3> -->
                                 <p>Mid Fade Haircut</p>
@@ -344,7 +344,7 @@
                 <div class="col-sm-6 col-md-4 filtr-item web music">
                     <div class="single-work mb-30">
                         <a href="img/Jake_Chucks_Cuts_Website.jpg" class="popup-link">
-                            <img class="effect" src="img/Jake_After.png" alt="work-4">
+                            <img class="effect" src="img/Jake_After.png" width="770" height="700" alt="work-4">
                             <div class="work-overlay effect">
                                 <h3>Project Title</h3>
                                 <p>WEB DEVELOPMENT</p>
