--- a/Main Template/index.html
+++ b/Main Template/index.html
@@ -203,7 +203,7 @@
                 <div class="col-xs-12 col-md-4">
                     <div class="single-service">
                         <div class="service-icon">
-                            <i class="fa fa-html5 effect"></i>
+                            <i class="fa fa-cut effect"></i>
                         </div>
                         <div class="service-content">
                             <h3>Vintage Fade and Tapers</h3>
@@ -216,7 +216,7 @@
                 <div class="col-xs-12 col-md-4">
                     <div class="single-service bordered">
                         <div class="service-icon">
-                            <i class="fa fa-laptop effect"></i>
+                            <i class="fa fa-history effect"></i>
                         </div>
                         <div class="service-content">
                             <h3>Modern and Classic Men's Haircuts </h3>
@@ -229,7 +229,7 @@
                 <div class="col-xs-12 col-md-4">
                     <div class="single-service">
                         <div class="service-icon">
-                            <i class="fa fa-mobile effect"></i>
+                            <i class="fa fa-pencil effect"></i>
                         </div>
                         <div class="service-content">
                             <h3>Lineups and Detailing</h3>
@@ -356,7 +356,7 @@
                 <div class="col-sm-6 col-md-4 filtr-item web music">
                     <div class="single-work mb-30">
                         <a href="img/Joey_Chucks_Cuts_Website.jpg" class="popup-link">
-                            <img class="effect" src="img/Joey_Chucks_Cut_After.jpg" alt="work-4">
+                            <img class="effect" src="img/Joey_After.jpg" alt="work-4">
                             <div class="work-overlay effect">
                                 <h3>Project Title</h3>
                                 <p>WEB DEVELOPMENT</p>
