added captions for pictures

--- a/Main Template/index.html
+++ b/Main Template/index.html
@@ -305,10 +305,10 @@
                         <li class="main-color">
                             <a href="#" class="filter effect" data-filter=".combovers">Combovers</a>
                         </li>
-                        <!-- <li class="main-color">
-                            <a href="#" class="filter effect" data-filter=".photography">photography</a>
-                        </li>
                         <li class="main-color">
+                            <a href="#" class="filter effect" data-filter=".before-after">Before & Afters</a>
+                        </li>
+                        <!-- <li class="main-color">
                             <a href="#" class="filter effect" data-filter=".music">Music</a>
                         </li> -->
                     </ul>
@@ -341,25 +341,25 @@
                     </div>
                 </div>
 
-                <div class="col-sm-6 col-md-4 filtr-item web music">
+                <div class="col-sm-6 col-md-4 filtr-item combovers before-after">
                     <div class="single-work mb-30">
                         <a href="img/Jake_Chucks_Cuts_Website.jpg" class="popup-link">
                             <img class="effect" src="img/Jake_After.png" width="770" height="700" alt="work-4">
                             <div class="work-overlay effect">
-                                <h3>Project Title</h3>
-                                <p>WEB DEVELOPMENT</p>
+                                <h3>Classic Gentlemen's Cut</h3>
+                                <p>Click for before vs after</p>
                             </div>
                         </a>
                     </div>
                 </div>
 
-                <div class="col-sm-6 col-md-4 filtr-item web music">
+                <div class="col-sm-6 col-md-4 filtr-item fades before-after">
                     <div class="single-work mb-30">
                         <a href="img/Joey_Chucks_Cuts_Website.jpg" class="popup-link">
                             <img class="effect" src="img/Joey_After.jpg" alt="work-4">
                             <div class="work-overlay effect">
-                                <h3>Project Title</h3>
-                                <p>WEB DEVELOPMENT</p>
+                                <h3>Low taper</h3>
+                                <p>Click for before vs after</p>
                             </div>
                         </a>
                     </div>
@@ -370,8 +370,8 @@
                         <a href="http://placehold.it/770x700" class="popup-link">
                             <img class="effect" src="http://placehold.it/770x700" alt="work-2">
                             <div class="work-overlay effect">
-                                <h3>Project Title</h3>
-                                <p>WEB DESIGN</p>
+                                <h3>Classic Gentlemen's Cut</h3>
+                                <p>Click for before/after</p>
                             </div>
                         </a>
                     </div>
