temporarily hid template testimonials

--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="one-testimonial">
+                        <!-- <div class="one-testimonial">
                             <div class="testimonial-content">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh facilisis bibendum dolor feugiat.</p>
                             </div>
@@ -488,7 +488,7 @@
                                     <p>Front End Developer</p>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
 
                     </div>
                 </div>
