--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:400,400i,700,700i" rel="stylesheet">
 
 	<!-- Favicon -->
-	<link rel="icon" href="img/favicon.ico">
+	<link rel="icon" href="img/logo-HMC.png">
 
 	<!-- Touch Icons - iOS and Android 2.1+ -->
  	<link rel="apple-touch-icon" href="img/logo-HMC.png">
