--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 
 	<!-- Touch Icons - iOS and Android 2.1+ -->
  	<link rel="apple-touch-icon" href="img/favicon.ico">
-	<link rel="apple-touch-icon" sizes="72x72" href="img/favicon.ico" />
-	<link rel="apple-touch-icon" sizes="114x114" href="img/favicon.ico" />
+	<link rel="apple-touch-icon" sizes="72x72" href="img/mudd-favicon.png" />
+	<link rel="apple-touch-icon" sizes="114x114" href="img/mudd-favicon.png" />
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
