--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 	<link rel="icon" href="img/favicon.ico">
 
 	<!-- Touch Icons - iOS and Android 2.1+ -->
- 	<link rel="apple-touch-icon" href="img/favicon.ico">
+    <link rel="apple-touch-icon" href="img/favicon.ico">
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 	<link rel="apple-touch-icon" sizes="72x72" href="img/mudd-favicon.png" />
 	<link rel="apple-touch-icon" sizes="114x114" href="img/mudd-favicon.png" />
 
