--- a/index.html
+++ b/index.html
@@ -367,11 +367,11 @@
 
                 <div class="col-sm-6 col-md-4 filtr-item design photography">
                     <div class="single-work mb-30">
-                        <a href="http://placehold.it/770x700" class="popup-link">
-                            <img class="effect" src="http://placehold.it/770x700" alt="work-2">
+                        <a href="img/Chuksi_High_Fade.JPG" class="popup-link">
+                            <img class="effect" src="img/Chuksi_High_Fade.JPG" alt="work-2">
                             <div class="work-overlay effect">
-                                <h3>Classic Gentlemen's Cut</h3>
-                                <p>Click for before/after</p>
+                                <!-- <h3>Mid Fade</h3> -->
+                                <p>Mid Fade</p>
                             </div>
                         </a>
                     </div>
