--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                     </div>
                 </div>
 
-                <div class="col-sm-6 col-md-4 filtr-item design photography">
+                <div class="col-sm-6 col-md-4 filtr-item fades>
                     <div class="single-work mb-30">
                         <a href="img/Chuksi_High_Fade.JPG" class="popup-link">
                             <img class="effect" src="img/Chuksi_High_Fade.JPG" alt="work-2">
