added chuksi resized

--- a/index.html
+++ b/index.html
@@ -365,13 +365,14 @@
                     </div>
                 </div>
 
-                <div class="col-sm-6 col-md-4 filtr-item fades>
+                
+                <div class="col-sm-6 col-md-4 filtr-item fades before-after">
                     <div class="single-work mb-30">
-                        <a href="img/Chuksi_High_Fade.JPG" class="popup-link">
-                            <img class="effect" src="img/Chuksi_High_Fade.JPG" alt="work-2">
+                        <a href="img/Chuksi_High_Fade.jpg" class="popup-link">
+                            <img class="effect" src="img/Chuksi_HighFade.jpg" alt="work-4">
                             <div class="work-overlay effect">
-                                <!-- <h3>Mid Fade</h3> -->
-                                <p>Mid Fade</p>
+                                <h3>Low taper</h3>
+                                <p>Click for before vs after</p>
                             </div>
                         </a>
                     </div>
