--- a/index.html
+++ b/index.html
@@ -536,14 +536,14 @@
                             </div>
                             <div class="c-text">
                                 <h5>EMAIL</h5>
-                                <h6>cmeng@g.hmc.edu</h6>
+                                <a href="mailto:cmeng@g.hmc.edu?Subject=Question About Chucks' Cuts" target="_top">cmeng@g.hmc.edu</a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div><!-- end row -->
 
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col-xs-12 col-md-10 col-md-offset-1">
                     <form id="contact-form" method="post" action="mail/contact.php">
                         <div class="col-sm-6">
@@ -564,7 +564,7 @@
 
                     </form>
                 </div>
-            </div> <!-- end row -->
+            </div> end row -->
         </div> <!-- End Container -->
     </section>
     <!-- END CONTACT -->
@@ -584,8 +584,6 @@
                         <li><a class="effect" href="https://www.instagram.com/cdotmeng" target="_blank"><i class="fa fa-instagram"></i></a></li>
                     </ul>
                 </div>
-                <!--location for copyright thing-->
-                <!-- <p class="copy-text">Imozar &copy; 2018. all right reserved, designed by <strong><a href="https://themeforest.net/user/phydev" target="_blank">PhyDev</a></strong>.</p> -->
             </div> <!-- end row -->
         </div> <!-- End Container -->
     </footer>
