--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <!-- SITE TITLE -->
     <title>Chuck's Cuts by Charles Meng</title>
-    <meta name="description" content="Bamboo - Personal Parallax Portfolio Template">
+    <meta name="description" content="Personal Website">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -91,6 +91,7 @@
     <!-- HOME -->
     <section id="home" class="home-1 parallax one-page-section">
         <div class="page-table">
+            <div> <style>body {background-image: url("img/mudd_campus.jpg"); background-size: 100% 100%}</style></div>
             <div class="table-cell text-center">
                 <div class="avatar-hero">
                     <img src="img/profile-pic.jpg">
@@ -364,31 +365,26 @@
                         </a>
                     </div>
                 </div>
-
-                
                 <div class="col-sm-6 col-md-4 filtr-item fades before-after">
-                    <div class="single-work mb-30">
-                        <a href="img/Chuksi_High_Fade.jpg" class="popup-link">
-                            <img class="effect" src="img/Chuksi_HighFade.jpg" alt="work-4">
-                            <div class="work-overlay effect">
-                                <h3>Low taper</h3>
-                                <p>Click for before vs after</p>
-                            </div>
-                        </a>
-                    </div>
+                  <div class="single-work mb-30">
+                      <a href="img/Chuksi_HighFade.jpg" class="popup-link">
+                          <img class="effect" src="img/Chuksi_HighFade.jpg" alt="work-4">
+                          <div class="work-overlay effect">
+                              <p>Mid Fade</p>
+                          </div>
+                      </a>
+                  </div>
+              </div>
+              <div class="col-sm-6 col-md-4 filtr-item fades before-after">
+                <div class="single-work mb-30">
+                    <a href="img/Brennan_Mullet.jpg" class="popup-link">
+                        <img class="effect" src="img/Brennan_Mullet.jpg" alt="work-4">
+                        <div class="work-overlay effect">
+                          <p>Low Taper</p>
+                        </div>
+                    </a>
                 </div>
-
-                <div class="col-sm-6 col-md-4 filtr-item photography">
-                    <div class="single-work mb-30">
-                        <a href="http://placehold.it/770x700" class="popup-link">
-                            <img class="effect" src="http://placehold.it/770x700" alt="work-6">
-                            <div class="work-overlay effect">
-                                <h3>Project Title</h3>
-                                <p>PHOTOGRAPHY</p>
-                            </div>
-                        </a>
-                    </div>
-                </div>
+            </div>
 
             </div><!-- end row -->
         </div> <!-- End Container -->
@@ -416,7 +412,7 @@
                                 </figure>
                                 <div class="testimonial-inf">
                                     <h4>Andy Cai</h4>
-                                    <p>Computer Science, UCLA '22</p>
+                                    <p>UCLA '22</p>
                                 </div>
                             </div>
                         </div>
@@ -518,7 +514,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xs-12 col-sm-4">
+                    <!-- <div class="col-xs-12 col-sm-4">
                         <div class="contact-item mb-30">
                             <div class="c-icon text-center">
                                 <i class="fa fa-map-marker"></i>
@@ -528,7 +524,7 @@
                                 <h6>301 Platt Boulevard, Claremont, CA.</h6>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="col-xs-12 col-sm-4">
                         <div class="contact-item mb-30">
                             <div class="c-icon text-center">
